WIP on Opportunity wizard. Related Parent is ok-ish, but needs more testin etc.

--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -41,6 +41,7 @@
     <Folder Include="WebResources\PNG format\" />
     <Folder Include="WebResources\Script %28JScript%29\" />
     <Folder Include="WebResources\Script %28JScript%29\libraries" />
+    <Folder Include="WebResources\Script %28JScript%29\arup_oppowiz" />
     <Folder Include="WebResources\Style Sheet %28CSS%29\" />
     <Folder Include="WebResources\Web Page %28HTML%29\" />
     <RegisterPlugin Include="RegisterFile.crmregister">
@@ -1327,31 +1328,46 @@
       <UniqueName>arup_OppoWizValidate.js</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script %28JScript%29\arup_oppowiz\arup_oppoWizInput.js">
+      <DisplayName>OppoWiz input class</DisplayName>
+      <UniqueName>arup_oppowiz/arup_oppoWizInput.js</UniqueName>
+      <WebResourceType>Script</WebResourceType>
+    </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script (JScript)\arup_oppowiz\arup_OppoWiz2.html">
+      <DisplayName>Oppowiz 2 html</DisplayName>
+      <UniqueName>arup_oppowiz/arup_OppoWiz.html</UniqueName>
+      <WebResourceType>WebPage</WebResourceType>
+    </CRMWebResource>
+    <CRMWebResource Include="WebResources\Script (JScript)\arup_oppowiz\arup_oppoWiz2.js">
+      <DisplayName>Oppowiz2 js</DisplayName>
+      <UniqueName>arup_oppowiz/arup_oppoWiz2.js</UniqueName>
+      <WebResourceType>Script</WebResourceType>
+    </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\Contact_main_library.js">
       <DisplayName>Contact_main_library</DisplayName>
       <UniqueName>arup_Contact_main_library</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
-    <CRMWebResource Include="WebResources\Script %28JScript%29\libraries\autoComplete.js">
+    <None Include="WebResources\Script %28JScript%29\libraries\autoComplete.js">
       <DisplayName>autoComplete.js</DisplayName>
       <UniqueName>arup_lib/autoComplete.js</UniqueName>
       <WebResourceType>Script</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\Script %28JScript%29\libraries\index.js">
+    </None>
+    <None Include="WebResources\Script %28JScript%29\libraries\index.js">
       <DisplayName>index</DisplayName>
       <UniqueName>arup_index</UniqueName>
       <WebResourceType>Script</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\Script %28JScript%29\libraries\underscore.js">
+    </None>
+    <None Include="WebResources\Script %28JScript%29\libraries\underscore.js">
       <DisplayName>underscore</DisplayName>
       <UniqueName>arup_underscore</UniqueName>
       <WebResourceType>Script</WebResourceType>
-    </CRMWebResource>
-    <CRMWebResource Include="WebResources\Script %28JScript%29\libraries\validate.js">
+    </None>
+    <None Include="WebResources\Script %28JScript%29\libraries\validate.js">
       <DisplayName>validate</DisplayName>
       <UniqueName>arup_validate</UniqueName>
       <WebResourceType>Script</WebResourceType>
-    </CRMWebResource>
+    </None>
     <CRMWebResource Include="WebResources\Script (JScript)\arup_dynamic_display_of_fieldvalue.js">
       <DisplayName>JScript1</DisplayName>
       <UniqueName>new_JScript1</UniqueName>
