adding a function to display Americas region specific fields and fixing a bug in country_onchange function (executioncontext vs formcontext)

--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1321,7 +1321,7 @@
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Script (JScript)\arup_CreditChecks.js">
       <DisplayName>arup_CreditChecks</DisplayName>
-      <UniqueName>arup_arup_CreditChecks</UniqueName>
+      <UniqueName>arup_CreditChecks</UniqueName>
       <WebResourceType>NotSupported</WebResourceType>
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\arup_dashboardsubscription.js">
