--- a/Team Customisations/TeamCustomisations.CSPROJ
+++ b/Team Customisations/TeamCustomisations.CSPROJ
@@ -12,9 +12,9 @@
     <AssemblyName>CRM Web Resources.BidReview_Customisation</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <SolutionPackagerDir>C:\Work\Tools\SDK8\SDK\Bin</SolutionPackagerDir>
-    <SolutionLocToolsDir>C:\Work\Tools\SDK8\SDK\Bin</SolutionLocToolsDir>
     <SolutionType>0</SolutionType>
+    <SolutionPackagerDir>C:\Work\Arup\repos\CRM Tools\CRM SDK\Bin</SolutionPackagerDir>
+    <SolutionLocToolsDir>C:\Work\Arup\repos\CRM Tools\CRM SDK\Bin</SolutionLocToolsDir>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -68,11 +68,85 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Entities\Team\Entity.xml" />
+    <Content Include="Entities\Team\FormXml\main\{4aabf594-b30a-490d-bf97-89c67c6777fe}.xml" />
+    <Content Include="Entities\Team\FormXml\main\{7ba7fac1-1418-4335-935f-f7f8dfd73fcc}.xml" />
+    <Content Include="Entities\Team\FormXml\main\{d56998ac-ee78-458a-99e0-b348205adb51}.xml" />
+    <Content Include="Entities\Team\FormXml\main\{f5cfab6a-d4c2-4519-b68f-6e7485432e29}.xml" />
+    <Content Include="Entities\Team\FormXml\quick\{36f295af-c91a-422e-9d00-756fcbb8db7f}.xml" />
+    <Content Include="Entities\Team\RibbonDiff.xml" />
+    <Content Include="Entities\Team\SavedQueries\{38beb6b9-fae8-e911-812b-00505690cb20}.xml" />
+    <Content Include="Entities\Team\SavedQueries\{a4a4cf11-659f-ea11-a812-000d3a86a78c}.xml" />
     <Content Include="Other\Customizations.xml" />
     <Content Include="Other\Relationships.xml" />
+    <Content Include="Other\Relationships\Account.xml" />
+    <Content Include="Other\Relationships\BusinessUnit.xml" />
+    <Content Include="Other\Relationships\Contact.xml" />
+    <Content Include="Other\Relationships\Organization.xml" />
+    <Content Include="Other\Relationships\Queue.xml" />
+    <Content Include="Other\Relationships\SystemUser.xml" />
+    <Content Include="Other\Relationships\TeamTemplate.xml" />
     <Content Include="Other\Solution.xml" />
+    <Content Include="Resources\ar-SA\resources.ar-SA.resx" />
+    <Content Include="Resources\bg-BG\resources.bg-BG.resx" />
+    <Content Include="Resources\ca-ES\resources.ca-ES.resx" />
+    <Content Include="Resources\cs-CZ\resources.cs-CZ.resx" />
+    <Content Include="Resources\da-DK\resources.da-DK.resx" />
+    <Content Include="Resources\de-DE\resources.de-DE.resx" />
+    <Content Include="Resources\el-GR\resources.el-GR.resx" />
     <Content Include="Resources\en-US\resources.en-US.resx" />
+    <Content Include="Resources\es-ES\resources.es-ES.resx" />
+    <Content Include="Resources\et-EE\resources.et-EE.resx" />
+    <Content Include="Resources\eu-ES\resources.eu-ES.resx" />
+    <Content Include="Resources\fi-FI\resources.fi-FI.resx" />
+    <Content Include="Resources\fr-FR\resources.fr-FR.resx" />
+    <Content Include="Resources\gl-ES\resources.gl-ES.resx" />
+    <Content Include="Resources\he-IL\resources.he-IL.resx" />
+    <Content Include="Resources\hi-IN\resources.hi-IN.resx" />
+    <Content Include="Resources\hr-HR\resources.hr-HR.resx" />
+    <Content Include="Resources\hu-HU\resources.hu-HU.resx" />
+    <Content Include="Resources\id-ID\resources.id-ID.resx" />
+    <Content Include="Resources\it-IT\resources.it-IT.resx" />
+    <Content Include="Resources\ja-JP\resources.ja-JP.resx" />
+    <Content Include="Resources\kk-KZ\resources.kk-KZ.resx" />
+    <Content Include="Resources\ko-KR\resources.ko-KR.resx" />
+    <Content Include="Resources\lt-LT\resources.lt-LT.resx" />
+    <Content Include="Resources\lv-LV\resources.lv-LV.resx" />
+    <Content Include="Resources\ms-MY\resources.ms-MY.resx" />
+    <Content Include="Resources\nb-NO\resources.nb-NO.resx" />
+    <Content Include="Resources\nl-NL\resources.nl-NL.resx" />
+    <Content Include="Resources\pl-PL\resources.pl-PL.resx" />
+    <Content Include="Resources\pt-BR\resources.pt-BR.resx" />
+    <Content Include="Resources\pt-PT\resources.pt-PT.resx" />
+    <Content Include="Resources\ro-RO\resources.ro-RO.resx" />
+    <Content Include="Resources\ru-RU\resources.ru-RU.resx" />
+    <Content Include="Resources\sk-SK\resources.sk-SK.resx" />
+    <Content Include="Resources\sl-SI\resources.sl-SI.resx" />
+    <Content Include="Resources\sr-Cyrl-CS\resources.sr-Cyrl-CS.resx" />
+    <Content Include="Resources\sr-Cyrl-RS\resources.sr-Cyrl-RS.resx" />
+    <Content Include="Resources\sr-Latn-CS\resources.sr-Latn-CS.resx" />
+    <Content Include="Resources\sr-Latn-RS\resources.sr-Latn-RS.resx" />
+    <Content Include="Resources\sv-SE\resources.sv-SE.resx" />
     <Content Include="Resources\template_resources.resx" />
+    <Content Include="Resources\th-TH\resources.th-TH.resx" />
+    <Content Include="Resources\tr-TR\resources.tr-TR.resx" />
+    <Content Include="Resources\uk-UA\resources.uk-UA.resx" />
+    <Content Include="Resources\vi-VN\resources.vi-VN.resx" />
+    <Content Include="Resources\zh-CN\resources.zh-CN.resx" />
+    <Content Include="Resources\zh-HK\resources.zh-HK.resx" />
+    <Content Include="Resources\zh-TW\resources.zh-TW.resx" />
+    <Content Include="WebResources\arup_Team_Main_Library.js">
+      <WebResourceId>edd9956b-c7a1-ea11-a812-000d3a86a78c</WebResourceId>
+      <Name>arup_Team_Main_Library.js</Name>
+      <DisplayName>arup_Team_Main_Library</DisplayName>
+      <WebResourceType>JScript</WebResourceType>
+      <IntroducedVersion>1.0.0.0</IntroducedVersion>
+      <IsCustomizable>True</IsCustomizable>
+      <CanBeDeleted>True</CanBeDeleted>
+      <IsHidden>False</IsHidden>
+    </Content>
+    <Content Include="Workflows\LeadClientOrganisation-BADCAD44-617E-EA11-8132-00505690CB20.xaml" />
+    <Content Include="Workflows\LeadClientOrganisation-BADCAD44-617E-EA11-8132-00505690CB20.xaml.data.xml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="WebResources\" />
