Replace OpenEntityForm with OpenForm + formContext.data.entity.save() with formContext.data.save() + close opportunity +removed debugger

--- a/CrmPackage/CrmPackage.csproj
+++ b/CrmPackage/CrmPackage.csproj
@@ -1323,8 +1323,8 @@
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Script %28JScript%29\opportunity_ribbon.js">
-      <DisplayName>opportunity_ribbon</DisplayName>
-      <UniqueName>new_opportunity_ribbon</UniqueName>
+      <DisplayName>opportunity_ribbon.js</DisplayName>
+      <UniqueName>opportunity_ribbon.js</UniqueName>
       <WebResourceType>Script</WebResourceType>
     </CRMWebResource>
     <CRMWebResource Include="WebResources\Script (JScript)\arup_dynamic_display_of_fieldvalue.js">
